--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-# Core
 streamlit==1.37.0
 requests==2.31.0
 nest-asyncio==1.6.0
 
-# OpenAI
 openai==1.30.5
 httpx==0.27.2
 tiktoken==0.7.0
 tenacity==8.5.0
 
-# LlamaIndex (cloud-stable)
 llama-index==0.10.30
 
+pypdf==3.17.4
+pdfplumber==0.10.3
+pdfminer.six==20221105
+
+pydantic==2.7.4
+cryptography==41.0.7
