--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-streamlit==1.37.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
 requests==2.31.0
-nest-asyncio==1.6.0
 
+llama-index==0.10.30
 openai==1.30.5
 httpx==0.27.2
 tiktoken==0.7.0
 tenacity==8.5.0
-
-llama-index==0.10.30
+pydantic==2.7.4
 
 pypdf==3.17.4
 pdfplumber==0.10.3
 pdfminer.six==20221105
-
-pydantic==2.7.4
